2009-02-19
Changed the $mysql->get() and $mysql->set() functions to $mysql->query() and improved the API for accessing the database

2009-02-18
Abstracted db_archive and db_diskimage module to using the db_file::get and db_file::cleanup functions
Fixed some problems with archive and diskimage modules, handles wasn't working on Windows because apprently <file>.zip\ also exists instead of exiting the for loop
Fixed counting in fs_archive and fs_diskimage, the matching and the !in_array was throwing off the count
Blogged about site
Migrated to new repository
Removed some unnessicary files from EXT JS template
Removed excess .htaccess files from all the subdirectories and put it in a location match

2009-02-17
Finished adding db_diskimage, time for some curl! for downloading movie information
Fixed db_archive and db_diskimage, there was a problem with showing the directory because it was acting like the fs_ version which is completely different
Archives not list out all directories properly even if the central directory doesn't specify one
Fixed db_archive module when adding zip files to database
Adding a nice percent complete print out in db_files module
Fixed cron.php plugin, it wasn't loading the state properly
Fixed a lot of inconsistencies, now the $sql->get command only accepts an array of arguments
Worked on db_albums module and made very little progress

2009-02-16
Worked on fs_imagedisk, outputting files works now
Worked on some more organization
Db_archive now fully functional, archives are searchable and in the database
Made the pretty dirs for the plugins the same for every plugins, links must now be specified in the template as /<plugin>/<category>/<id>/<filename>

2009-02-11
Added fs_ modules for handling reading files off the filesystem, this should make the use of a database a lot more modular
Fixed broken plugins from the fs_ modules change.